<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/ic_bignum"
    id="bignum"
    scansDevices="false">
    <!-- Speed -->
    <DataType displayName="@string/df_speed"     graphical="true" icon="@drawable/ic_speed" typeId="speed"       description="@string/df_speed_desc"/>
    <DataType displayName="@string/df_speed_3s" graphical="true" icon="@drawable/ic_speed" typeId="speed3s" description="@string/df_speed_3s_desc"/>
    <DataType displayName="@string/df_speed_5s" graphical="true" icon="@drawable/ic_speed" typeId="speed5s" description="@string/df_speed_5s_desc"/>
    <DataType displayName="@string/df_speed_10s" graphical="true" icon="@drawable/ic_speed" typeId="speed10s" description="@string/df_speed_10s_desc"/>
    <DataType displayName="@string/df_avg_speed" graphical="true" icon="@drawable/ic_speed" typeId="avgSpeed" description="@string/df_avg_speed_desc"/>
    <DataType displayName="@string/df_max_speed" graphical="true" icon="@drawable/ic_speed" typeId="maxSpeed" description="@string/df_max_speed_desc"/>

    <!-- Distance -->
    <DataType displayName="@string/df_distance"  graphical="true" icon="@drawable/ic_distance" typeId="distance"    description="@string/df_distance_desc"/>

    <!-- Heart rate -->
    <DataType displayName="@string/df_hr"        graphical="true" icon="@drawable/ic_heart" typeId="hr"          description="@string/df_hr_desc"/>
    <DataType displayName="@string/df_hr_zone" graphical="true" icon="@drawable/ic_heart" typeId="hrZone" description="@string/df_hr_zone_desc"/>
    <DataType displayName="@string/df_avg_hr"    graphical="true" icon="@drawable/ic_heart" typeId="avgHr"       description="@string/df_avg_hr_desc"/>
    <DataType displayName="@string/df_max_hr" graphical="true" icon="@drawable/ic_heart" typeId="maxHr" description="@string/df_max_hr_desc"/>
    <DataType displayName="@string/df_pct_max_hr" graphical="true" icon="@drawable/ic_heart" typeId="percentMaxHr" description="@string/df_pct_max_hr_desc"/>
    <DataType displayName="@string/df_pct_hrr" graphical="true" icon="@drawable/ic_heart" typeId="percentHrr" description="@string/df_pct_hrr_desc"/>
    <DataType displayName="@string/df_avg_pct_hrr" graphical="true" icon="@drawable/ic_heart" typeId="avgPercentHrr" description="@string/df_avg_pct_hrr_desc"/>

    <!-- Cadence -->
    <DataType displayName="@string/df_cadence"   graphical="true" icon="@drawable/ic_cadence" typeId="cadence"     description="@string/df_cadence_desc"/>
    <DataType displayName="@string/df_cadence_3s" graphical="true" icon="@drawable/ic_cadence" typeId="cadence3s" description="@string/df_cadence_3s_desc"/>
    <DataType displayName="@string/df_cadence_5s" graphical="true" icon="@drawable/ic_cadence" typeId="cadence5s" description="@string/df_cadence_5s_desc"/>
    <DataType displayName="@string/df_cadence_10s" graphical="true" icon="@drawable/ic_cadence" typeId="cadence10s" description="@string/df_cadence_10s_desc"/>
    <DataType displayName="@string/df_avg_cadence" graphical="true" icon="@drawable/ic_cadence" typeId="avgCadence" description="@string/df_avg_cadence_desc"/>
    <DataType displayName="@string/df_max_cadence" graphical="true" icon="@drawable/ic_cadence" typeId="maxCadence" description="@string/df_max_cadence_desc"/>

    <!-- Power -->
    <DataType displayName="@string/df_power" graphical="true" icon="@drawable/ic_bolt" typeId="power" description="@string/df_power_desc"/>
    <DataType displayName="@string/df_power_zone" graphical="true" icon="@drawable/ic_bolt" typeId="powerZone" description="@string/df_power_zone_desc"/>
    <DataType displayName="@string/df_power_3s" graphical="true" icon="@drawable/ic_bolt" typeId="power3s" description="@string/df_power_3s_desc"/>
    <DataType displayName="@string/df_power_5s" graphical="true" icon="@drawable/ic_bolt" typeId="power5s" description="@string/df_power_5s_desc"/>
    <DataType displayName="@string/df_power_10s" graphical="true" icon="@drawable/ic_bolt" typeId="power10s" description="@string/df_power_10s_desc"/>
    <DataType displayName="@string/df_power_30s" graphical="true" icon="@drawable/ic_bolt" typeId="power30s" description="@string/df_power_30s_desc"/>
    <DataType displayName="@string/df_power_20m" graphical="true" icon="@drawable/ic_bolt" typeId="power20m" description="@string/df_power_20m_desc"/>
    <DataType displayName="@string/df_power_1hr" graphical="true" icon="@drawable/ic_bolt" typeId="power1hr" description="@string/df_power_1hr_desc"/>
    <DataType displayName="@string/df_avg_power" graphical="true" icon="@drawable/ic_bolt" typeId="avgPower" description="@string/df_avg_power_desc"/>
    <DataType displayName="@string/df_max_power" graphical="true" icon="@drawable/ic_bolt" typeId="maxPower" description="@string/df_max_power_desc"/>
    <DataType displayName="@string/df_pct_ftp" graphical="true" icon="@drawable/ic_bolt" typeId="percentMaxFtp" description="@string/df_pct_ftp_desc"/>
    <DataType displayName="@string/df_np" graphical="true" icon="@drawable/ic_bolt" typeId="np" description="@string/df_np_desc"/>
    <DataType displayName="@string/df_w_kg"      graphical="true" icon="@drawable/ic_bolt" typeId="powerToWeight" description="@string/df_w_kg_desc"/>
    <DataType displayName="@string/df_w_kg_3s" graphical="true" icon="@drawable/ic_bolt" typeId="powerToWeight3s" description="@string/df_w_kg_3s_desc"/>
    <DataType displayName="@string/df_w_kg_5s" graphical="true" icon="@drawable/ic_bolt" typeId="powerToWeight5s" description="@string/df_w_kg_5s_desc"/>
    <DataType displayName="@string/df_tss" graphical="true" icon="@drawable/ic_bolt" typeId="tss" description="@string/df_tss_desc"/>
    <DataType displayName="@string/df_calories" graphical="true" icon="@drawable/ic_bolt" typeId="calories" description="@string/df_calories_desc"/>

    <!-- Climbing -->
    <DataType displayName="@string/df_altitude" graphical="true" icon="@drawable/ic_elevation" typeId="altitude" description="@string/df_altitude_desc"/>
    <DataType displayName="@string/df_elevation" graphical="true" icon="@drawable/ic_elevation" typeId="elevation"   description="@string/df_elevation_desc"/>
    <DataType displayName="@string/df_descent" graphical="true" icon="@drawable/ic_elevation" typeId="descent" description="@string/df_descent_desc"/>
    <DataType displayName="@string/df_grade"     graphical="true" icon="@drawable/ic_grade" typeId="grade"       description="@string/df_grade_desc"/>
    <DataType displayName="@string/df_vam" graphical="true" icon="@drawable/ic_elevation" typeId="vam" description="@string/df_vam_desc"/>
    <DataType displayName="@string/df_avg_vam" graphical="true" icon="@drawable/ic_elevation" typeId="avgVam" description="@string/df_avg_vam_desc"/>
    <DataType displayName="@string/df_dist_to_top" graphical="true" icon="@drawable/ic_distance" typeId="distanceToTop" description="@string/df_dist_to_top_desc"/>
    <DataType displayName="@string/df_elev_to_top" graphical="true" icon="@drawable/ic_elevation" typeId="elevationToTop" description="@string/df_elev_to_top_desc"/>

    <!-- Lap -->
    <DataType displayName="@string/df_lap_number" graphical="true" icon="@drawable/ic_info" typeId="lapNumber" description="@string/df_lap_number_desc"/>
    <DataType displayName="@string/df_lap_time" graphical="true" icon="@drawable/ic_clock" typeId="lapTime" description="@string/df_lap_time_desc"/>
    <DataType displayName="@string/df_lap_distance" graphical="true" icon="@drawable/ic_distance" typeId="lapDistance" description="@string/df_lap_distance_desc"/>
    <DataType displayName="@string/df_lap_speed" graphical="true" icon="@drawable/ic_speed" typeId="lapSpeed" description="@string/df_lap_speed_desc"/>
    <DataType displayName="@string/df_lap_max_speed" graphical="true" icon="@drawable/ic_speed" typeId="lapMaxSpeed" description="@string/df_lap_max_speed_desc"/>
    <DataType displayName="@string/df_lap_hr" graphical="true" icon="@drawable/ic_heart" typeId="lapHr" description="@string/df_lap_hr_desc"/>
    <DataType displayName="@string/df_lap_max_hr" graphical="true" icon="@drawable/ic_heart" typeId="lapMaxHr" description="@string/df_lap_max_hr_desc"/>
    <DataType displayName="@string/df_lap_cadence" graphical="true" icon="@drawable/ic_cadence" typeId="lapCadence" description="@string/df_lap_cadence_desc"/>
    <DataType displayName="@string/df_lap_max_cadence" graphical="true" icon="@drawable/ic_cadence" typeId="lapMaxCadence" description="@string/df_lap_max_cadence_desc"/>
    <DataType displayName="@string/df_lap_power" graphical="true" icon="@drawable/ic_bolt" typeId="lapPower" description="@string/df_lap_power_desc"/>
    <DataType displayName="@string/df_lap_np" graphical="true" icon="@drawable/ic_bolt" typeId="lapNp" description="@string/df_lap_np_desc"/>
    <DataType displayName="@string/df_lap_max_power" graphical="true" icon="@drawable/ic_bolt" typeId="lapMaxPower" description="@string/df_lap_max_power_desc"/>
    <DataType displayName="@string/df_lap_w_kg" graphical="true" icon="@drawable/ic_bolt" typeId="lapPowerToWeight" description="@string/df_lap_w_kg_desc"/>
    <DataType displayName="@string/df_lap_vam" graphical="true" icon="@drawable/ic_elevation" typeId="lapVam" description="@string/df_lap_vam_desc"/>
    <DataType displayName="@string/df_lap_ascent" graphical="true" icon="@drawable/ic_elevation" typeId="lapAscent" description="@string/df_lap_ascent_desc"/>
    <DataType displayName="@string/df_lap_descent" graphical="true" icon="@drawable/ic_elevation" typeId="lapDescent" description="@string/df_lap_descent_desc"/>

    <!-- Navigation -->
    <DataType displayName="@string/df_dist_to_dest" graphical="true" icon="@drawable/ic_distance" typeId="distanceToDestination" description="@string/df_dist_to_dest_desc"/>
    <DataType displayName="@string/df_dist_to_turn" graphical="true" icon="@drawable/ic_distance" typeId="distanceToNextTurn" description="@string/df_dist_to_turn_desc"/>
    <DataType displayName="@string/df_time_to_dest" graphical="true" icon="@drawable/ic_clock" typeId="timeToDestination" description="@string/df_time_to_dest_desc"/>
    <DataType displayName="@string/df_eta" graphical="true" icon="@drawable/ic_clock" typeId="timeOfArrival" description="@string/df_eta_desc"/>

    <!-- Time and environment -->
    <DataType displayName="@string/df_elapsed"   graphical="true" icon="@drawable/ic_clock" typeId="elapsed"     description="@string/df_elapsed_desc"/>
    <DataType displayName="@string/df_total_time" graphical="true" icon="@drawable/ic_clock" typeId="totalTime" description="@string/df_total_time_desc"/>
    <DataType displayName="@string/df_clock" graphical="true" icon="@drawable/ic_clock" typeId="clockTime" description="@string/df_clock_desc"/>
    <DataType displayName="@string/df_sunrise" graphical="true" icon="@drawable/ic_clock" typeId="sunrise" description="@string/df_sunrise_desc"/>
    <DataType displayName="@string/df_sunset" graphical="true" icon="@drawable/ic_clock" typeId="sunset" description="@string/df_sunset_desc"/>
    <DataType displayName="@string/df_temp"      graphical="true" icon="@drawable/ic_temp" typeId="temp"        description="@string/df_temp_desc"/>
    <DataType displayName="@string/df_battery" graphical="true" icon="@drawable/ic_battery" typeId="battery" description="@string/df_battery_desc"/>

    <!-- Native Karoo TPMS -->
    <DataType displayName="@string/df_tpms_front" graphical="true" icon="@drawable/ic_tire_pressure" typeId="tirePressureFront" description="@string/df_tpms_front_desc"/>
    <DataType displayName="@string/df_tpms_rear" graphical="true" icon="@drawable/ic_tire_pressure" typeId="tirePressureRear" description="@string/df_tpms_rear_desc"/>

    <!-- Composite -->
    <DataType displayName="@string/df_hud" graphical="true" icon="@drawable/ic_bignum" typeId="hud" description="@string/df_hud_desc"/>
</ExtensionInfo>
